Convert to ProcessBuilder